apps/helper-app/src/home/home.component.scss
@import 'variables';

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

.header {
  width: 100%;
  position: relative;
  height: 400px;
  background-image: url('/assets/hero.png');
  background-position: center;
  background-repeat: no-repeat;
  background-color: #373737;
  display: flex;
  justify-content: center;

  .nav-bar {
    margin-top: 1.5rem;
    position: relative;
    display: inline-block;
    width: 100%;

    img.app-logo {
      height: 2rem;
      cursor: pointer;
      outline: 0;
    }

    .links {
      float: right;
      display: flex;
      flex-wrap: wrap;
      justify-content: right;
      text-align: right;

      @media (max-width: $breakpoint-xs) {
        flex-direction: column;
      }

      a {
        color: white;
        text-decoration: none;
        padding-left: 3rem;
        font-size: 1rem;
        line-height: 28px;
      }
    }
  }

  .title {
    color: white;
    font-size: 34px;
    line-height: 47px;
    margin-top: 4rem;

    @media (max-width: $breakpoint-md) {
      font-size: 24px;
      line-height: 34px;
    }

    @media (max-width: $breakpoint-xs) {
      font-size: 20px;
      line-height: 26px;
      margin-top: 2rem;
    }
  }

  .sub-title {
    color: white;
    margin-top: 1rem;
    font-size: 18px;
    line-height: 26px;
    width: calc(100% - 10rem);

    @media (max-width: $breakpoint-md) {
      font-size: 16px;
      line-height: 20px;
      width: 100%;
    }

    @media (max-width: $breakpoint-xs) {
      font-size: 14px;
      line-height: 18px;
    }
  }

  .search-help-toggle {
    position: absolute;
    height: 56px;
    width: 617px;
    bottom: -27px;
    background: white;
    overflow: hidden;
    border-radius: 8px;
    box-shadow: 0px 1px 2px 0px #bfbfbf;
    font-size: 18px;
    letter-spacing: 0.1px;
    display: flex;
    justify-content: stretch;
    line-height: 56px;

    @media (max-width: $breakpoint-md) {
      width: 500px;
      font-size: 14px;
      height: 42px;
      line-height: 42px;
    }

    @media (max-width: $breakpoint-md) {
      display: none;
    }

    a {
      text-align: center;
      flex-grow: 1;
      font-weight: 500;
      display: inline-block;
      font-size: 18px;
      letter-spacing: 0.1px;
      font-family: Roboto;

      strong {
        font-weight: 700;
      }

      &.bg-blue {
        background-color: $primary;
        color: white;
      }

      &.bg-red {
        background-color: $accent;
        color: white;
      }
    }
  }
}

.content-center {
  width: 960px;
  margin: 0 4 * $basic-spacer;

  @media (max-width: $breakpoint-xl) {
    width: 100%;
  }
}

// boostrap breakpoints
// $breakpoint-xs 720px 960px 1140px

.container {
  display: flex;
  justify-content: center;
  padding: 4 * $basic-spacer;

  .content-area {
    width: 100%;
    max-width: $breakpoint-lg;
    display: flex;
    flex-flow: row-reverse;
    margin-top: 4 * $basic-spacer;

    @media (max-width: $breakpoint-md) {
      flex-direction: column;
      margin-top: $basic-spacer;
    }

    .card-list {
      max-width: 8 * $grid-col-width;
      width: calc(100% - 257px - 32px);

      @media (max-width: $breakpoint-md) {
        max-width: 100%;
        width: 100%;
      }

      form {
        display: flex;
        justify-content: space-between;

        mat-form-field {
          width: 31%;
        }
      }
    }

    .actions {
      max-width: 4 * $grid-col-width;
      margin: 0 16px;

      @media (max-width: $breakpoint-md) {
        margin: 0;
        max-width: 100%;
        width: 100%;
        margin-bottom: 2rem;
      }

      a.action-card {
        height: 80px;
        margin: 16px 0;
        border-radius: $border-radius;
        padding: $basic-spacer * 2;
        background-color: $primary;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        text-decoration: none;
        color: #fff;

        .text {
          padding: 2 * $basic-spacer 0 2 * $basic-spacer 2 * $basic-spacer;
        }

        &.bg-blue {
          background-color: $primary;
          color: white;
        }

        &.bg-red {
          background-color: $accent;
          color: white;
        }

        img {
          padding: 0 $basic-spacer;
          height: 48px;

          &.arrow {
            opacity: 0.6;
            height: 28px;
          }
        }

        &:last-child {
          background-color: $accent;
        }
      }

      .color-red {
        color: $accent;
      }
    }

    h3 {
      color: rgba(0, 0, 0, 0.87);
      font-weight: 500;
      font-size: 20px;
      line-height: 24px;
      letter-spacing: 0.15px;
    }
  }
}

.search-help-toggle-mobile {
  overflow: hidden;
  white-space: pre-wrap;
  letter-spacing: 0.1px;
  display: flex;
  flex-direction: row;
  line-height: 56px;
  width: 100%;
  font-size: 14px;
  line-height: 20px;
  margin: 5 * $basic-spacer 0;
  border-radius: 250px;

  @media (min-width: $breakpoint-md + 1px) {
    display: none;
  }

  a {
    padding: $basic-spacer 2 * $basic-spacer;
    flex-grow: 1;
    font-weight: 500;
    display: inline-block;
    // height: 28px;
    // margin: $basic-spacer 0;
    box-shadow: $shadow-1;
    background-color: white;

    &:first-child {
      text-align: right;
    }

    // alles passt
    // alles passt
    // alles passt
    // alles passt

    &.bg-blue {
      background-color: $primary;
      color: white;
    }

    &.bg-red {
      background-color: $accent;
      color: white;
    }
  }
}

